--- a/account/m_account_welfare.html
+++ b/account/m_account_welfare.html
@@ -98,14 +98,9 @@
 	<script src="../js/UserInfo.js"></script>
 	<script>
 		mui.init();
-		mui.plusReady(function(){
-			self = plus.webview.currentWebview();
-			user = self.user;
-			document.getElementById("finish_task").innerText = user.tcount_u;
-			document.getElementById("finish_finance").innerText = user.fcount_u;
-			plus.nativeUI.closeWaiting();
-			self.show();
-		});
+		user = UserInfo.userinfo();
+		document.getElementById("finish_task").innerText = user.tcount_u;
+		document.getElementById("finish_finance").innerText = user.fcount_u;
 		var get_welfare_url = "http://test.wafuli.cn/account/welfare_json/";
 		(function($) {
 			//阻尼系数
