--- a/account/m_account_charge.html
+++ b/account/m_account_charge.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head lang="en">
 		<meta charset="UTF-8">
 		<!-- 优先使用 IE 最新版本和 Chrome -->
@@ -104,16 +103,10 @@
 		<script>
 			mui.init();
 			var get_charge_url = "http://test.wafuli.cn/app/charge_json/";
-			var self = null;
-			mui.plusReady(function(){
-				self = plus.webview.currentWebview();
-				user = self.user;
-				document.getElementById("balance").innerText = user.balance;
-				document.getElementById('userimg').src = user.img;
-				document.getElementById('mobile').innerText = user.mobile;
-				plus.nativeUI.closeWaiting();
-				self.show();
-			});
+			user = UserInfo.userinfo();
+			document.getElementById("balance").innerText = user.balance;
+			document.getElementById('userimg').src = "../images/user-0" + user.userimg + ".png";
+			document.getElementById('mobile').innerText = user.mobile;
 			(function($) {
 				//阻尼系数
 				var deceleration = mui.os.ios?0.003:0.0009;
@@ -213,25 +206,23 @@
 			});
 
 			document.getElementById('Btn').addEventListener("tap",function(){
-				mui.openWindow({
-		            url: "m_account_withdraw.html",
-		            id: "withdraw",
-		            styles: {
-		                top: 0,
-		                bottom: 0
-		            },
-		            show: {
-		            	autoShow:false,
-		                aniShow: 'slide-in-right',
-		            },
-		            waiting: {
-		                autoShow: false, //自动显示等待框
-		                title: '正在加载...', //等待对话框上显示的提示内容
-		            },
-		            extras:{
-		            	user:self.user
-		            }
-		        });
+				plus.webview.currentWebview().loadURL("m_account_withdraw.html");
+//				mui.openWindow({
+//		            url: "m_account_withdraw.html",
+//		            id: "withdraw",
+//		            styles: {
+//		                top: 0,
+//		                bottom: 0
+//		            },
+//		            show: {
+//		            	autoShow:false,
+//		                aniShow: 'slide-in-right',
+//		            },
+//		            waiting: {
+//		                autoShow: false, //自动显示等待框
+//		                title: '正在加载...', //等待对话框上显示的提示内容
+//		            },
+//		        });
 			});
 		</script>
 	</body>
