--- a/m_account_index.html
+++ b/m_account_index.html
@@ -149,7 +149,7 @@
       				var targetTab = this.getAttribute('href');
       				tempview.loadURL(targetTab);
       				setTimeout(function(){
-      					tempview.show('slide-in-right');
+      					tempview.show('pop-in');
       				},10);
 //    				console.log(tempview.id);
 //					mui.openWindow({
@@ -177,7 +177,7 @@
       			else{
       				tempview.loadURL("account/m_account_settings.html");
       				setTimeout(function(){
-      					tempview.show('slide-in-right');
+      					tempview.show('pop-in');
       				},10);
 //					mui.openWindow({
 //			            url: "account/m_account_settings.html",
