--- a/m_task_middle.html
+++ b/m_task_middle.html
@@ -2,24 +2,6 @@
 <html>
 	<head lang="en">
 		<meta charset="UTF-8">
-		<!-- 优先使用 IE 最新版本和 Chrome -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<!-- 为移动设备添加 viewport -->
-		<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		<!-- 添加到主屏后的标题（iOS 6 新增） -->
-		<meta name="apple-mobile-web-app-title" content="">
-		<!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<!-- 设置苹果工具栏颜色 -->
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<!-- 添加智能 App 广告条 Smart App Banner（iOS 6+ Safari） -->
-		<meta name="apple-itunes-app" content="app-id=myAppStoreID, affiliate-data=myAffiliateData, app-argument=myURL">
-		<!-- 忽略页面中的数字识别为电话，忽略email识别 -->
-		<meta name="format-detection" content="telphone=no, email=no" />
-		<!--下面三个是清除缓存 微信浏览器缓存严重又无刷新；这个方法调试的时候很方便-->
-		<meta http-equiv="Pragma" content="no-cache">
-		<meta http-equiv="Cache-Control" content="no-cache">
-		<meta http-equiv="Expires" content="0">
 		<link href="css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="css/m_common.css" />
 		<link rel="stylesheet" type="text/css" href="css/m_task.css" />
@@ -36,9 +18,9 @@
 		</div>
 
 		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="js/mui.pullToRefresh.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="js/mui.pullToRefresh.material.js"></script>
 		<script>
+			var slide_group = document.body.querySelector('.mui-slider-group');
+			var slide_indicator = document.body.querySelector('.mui-slider-indicator');
 			var table = document.body.querySelector('.mui-table-view');
 			var get_task_url = "http://test.wafuli.cn/task_json";
 			var host = "http://test.wafuli.cn";
@@ -78,7 +60,7 @@
 								var wel = data[i];
 								var li = document.createElement('li');
 								li.className = 'mui-table-view-cell';
-								str_html = '<a class="clearfix" href="' + wel.url + '"><div class="img-box"><img src="'+
+								str_html = '<a class="clearfix" data_id="' + wel.id + '" href="' + wel.url + '"><div class="img-box"><img src="'+
 			                    	host + wel.picurl + '" /></div><p class="info-right';
 								if (wel.state=='2'){
 			                    	str_html += ' task-end';
@@ -110,6 +92,24 @@
 					}
 				});
 			}
+			var detailMainWebview = null; //详情页面父webview
+			var detailWebview = null; //详情页面子webview
+			function open_welfare_detail(id,title,img) {
+				var template = getTemplate('task','template.html',"html/m_detail_task.html");
+				if (!template){
+					mui.alert("系统错误！");
+				}
+				detailMainWebview = template.header;
+				detailWebview = template.content;
+				mui.fire(detailMainWebview, 'updateHeader', {
+					title: title
+				});
+				//触发子窗口变更新闻详情
+				mui.fire(detailWebview, 'display', {
+					id: id,
+					img: img,
+				});
+			};
 		</script>
 	</body>
 
